--- a/style.css
+++ b/style.css
@@ -104,18 +104,7 @@ h3{
     }
 }
 @media screen and ( max-width: 780px) {
-    section{
-        background-position-y: 50%;
-        display: flex;
-        flex-direction: column-reverse;
-        }
-        .days{
-            text-align: end;
-        }
-        .logo{
-            top: 0;
-        }
-    .message{
+      .message{
         height: 200PX;
     } 
 }
@@ -124,7 +113,7 @@ h3{
     background-position-y:50% ;
     }
 }
-/* @media screen and ( max-width: 380px) {
+@media screen and ( max-width: 380px) {
     section{
     background-position-y: 50%;
     display: flex;
@@ -136,4 +125,4 @@ h3{
     .logo{
         top: 0;
     }
-} */
+}
